added sensors; improved locate function

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,8 +17,11 @@ lib_deps =
   PubSubClient
   ArduinoJson@~5.13.4
 
-;upload_port = roomba.local
+
 ;upload_port = COM5
+
 upload_port = 192.168.1.197
+upload_protocol = espota
+
 build_flags = -DLOGGING=1 -DMQTT_MAX_PACKET_SIZE=512
-monitor_baud = 115200
+monitor_speed = 115200
